[package]
name = "waterkit-screen"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "Screen capture and display management"
keywords = ["screen", "display", "capture", "screenshot"]
categories = ["os", "gui"]

[lints]
workspace = true

[dependencies]
thiserror.workspace = true

# Desktop
[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
screenshots = "0.8"
# brightness = "0.4" # Build failed on macOS
tokio = { workspace = true, features = ["full"] }

# Apple platforms (iOS, macOS)
[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
swift-bridge.workspace = true

metal.workspace = true
core-foundation.workspace = true
objc2.workspace = true
objc2-foundation = { workspace = true, features = ["NSObject"] }

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.build-dependencies]
waterkit-build.workspace = true

# Android
[target.'cfg(target_os = "android")'.dependencies]
jni.workspace = true
