[package]
name = "waterkit-secret"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository = "https://github.com/water-rs/kit"
description = "Cross-platform secure storage for WaterUI"
keywords = ["secret", "keychain", "keystore", "credential", "password"]
categories = ["gui", "os", "cryptography"]

[lints]
workspace = true

[dependencies]
thiserror.workspace = true

# Apple (iOS, macOS)
[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
keyring = "2"

# Android
[target.'cfg(target_os = "android")'.dependencies]
jni.workspace = true
# We will try to implement direct JNI or use a crate if strictly needed, 
# but for now standard JNI to Keystore is cleaner than adding a dependency that might not fit waterkit's context model exactly without testing.
# actually, let's see if we can use `android-keyring` if available or just raw JNI. 
# The user wants "less kotlin", so raw JNI is better than custom Kotlin helper.
# `android-keyring` crate might be good but I don't have it in workspace yet. 
# I will stick to JNI to minimize external unknown deps issues, or adding it if confident.
# Let's start with just JNI as I can write the Rust code to call Java APIs directly.

# Windows
[target.'cfg(target_os = "windows")'.dependencies]
keyring = "2" # using keyring crate for Windows/Linux as requested

# Linux
[target.'cfg(target_os = "linux")'.dependencies]
keyring = "2"
