[package]
name = "waterkit-sensor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository = "https://github.com/water-rs/kit"
description = "Cross-platform sensor access (accelerometer, gyroscope, magnetometer, barometer) for WaterUI"
keywords = ["sensor", "accelerometer", "gyroscope", "ios", "android"]
categories = ["gui", "os"]

[lints]
workspace = true

[dependencies]
futures.workspace = true
futures-timer = { workspace = true }
log.workspace = true

[build-dependencies]
waterkit-build.workspace = true

# Apple platforms (iOS, macOS)
[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
swift-bridge.workspace = true

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.build-dependencies]

# Android
[target.'cfg(target_os = "android")'.dependencies]
jni.workspace = true

# Windows
[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = [
    "Devices_Sensors",
    "Foundation",
] }

# Linux
[target.'cfg(target_os = "linux")'.dependencies]
zbus.workspace = true
