[package]
name = "waterkit-system"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]

# Desktop (System Info & Thermal)
[target.'cfg(any(target_os = "windows", target_os = "linux", target_os = "macos"))'.dependencies]
sysinfo.workspace = true

# Windows Connectivity
[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = [
    "Networking_Connectivity",
] }

# Linux Connectivity (Using netdev for now as fallback/helper if needed, but maybe just sysinfo is enough for some?)
# Actually netdev is good for interface listing. 
# We'll see if we need it. Let's add it for Linux mainly.
[target.'cfg(target_os = "linux")'.dependencies]
netdev.workspace = true

# Apple (iOS/macOS)
[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
swift-bridge = { workspace = true, features = [] }
swift-rs.workspace = true

# Android
[target.'cfg(target_os = "android")'.dependencies]
jni.workspace = true

[build-dependencies]
waterkit-build.workspace = true
