[package]
name = "waterkit-video"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
repository = "https://github.com/water-rs/kit"
description = "Cross-platform video muxing, demuxing, and playback for WaterUI"
keywords = ["video", "mp4", "mov", "muxer", "decoder"]
categories = ["multimedia", "encoding"]

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
wgpu.workspace = true

# MP4/MOV container support
# MP4/MOV container support
byteorder = { workspace = true }
mp4 = { workspace = true }

# Windowed playback
winit = { workspace = true }
pollster = { workspace = true }

# Apple platforms: VideoToolbox hardware codec
[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
objc2 = { workspace = true }
objc2-foundation = { workspace = true, features = ["NSObject", "NSData", "NSDictionary"] }
objc2-core-media = { workspace = true, features = ["CMSampleBuffer", "CMTime", "CMFormatDescription"] }
objc2-core-video = { workspace = true, features = ["CVBuffer", "CVPixelBuffer", "CVImageBuffer"] }
objc2-video-toolbox = { workspace = true, features = ["VTDecompressionSession", "VTSession"] }
