[package]
name = "waterkit-video"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "Video playback and processing"
keywords = ["video", "playback", "mp4", "mov", "hardware"]
categories = ["multimedia::video", "gui"]

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
wgpu.workspace = true

# MP4/MOV container support
# MP4/MOV container support
byteorder = { workspace = true }
mp4 = { workspace = true }

# Apple platforms: VideoToolbox hardware codec
[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
objc2 = { workspace = true }
objc2-foundation = { workspace = true, features = ["NSObject", "NSData", "NSDictionary"] }
objc2-core-media = { workspace = true, features = ["CMSampleBuffer", "CMTime", "CMFormatDescription"] }
objc2-core-video = { workspace = true, features = ["CVBuffer", "CVPixelBuffer", "CVImageBuffer"] }
objc2-video-toolbox = { workspace = true, features = ["VTDecompressionSession", "VTSession"] }
