[package]
name = "waterkit-build"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "Shared build utilities crates"
keywords = ["build", "swift", "kotlin", "automation"]
categories = ["development-tools::build-utils"]

[dependencies]
swift-bridge-build.workspace = true
