[package]
name = "waterkit-test-ios"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["staticlib"]

[dependencies]
swift-bridge.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
log.workspace = true
waterkit_content = { path = "/Users/lexoliu/Coding/kit/notification", package = "waterkit-notification" }

[features]
sensor = []
biometric = []
location = []
audio = []
camera = []
clipboard = []
codec = []
dialog = []
fs = []
haptic = []
notification = []
permission = []
secret = []
system = []
video = []

[build-dependencies]
swift-bridge-build.workspace = true
waterkit-build.workspace = true
