[package]
name = "waterkit-test-ios"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["staticlib"]

[dependencies]
swift-bridge.workspace = true
tokio = { workspace = true, features = ["macros", "rt"] }
log.workspace = true
waterkit-sensor.workspace = true
waterkit-biometric.workspace = true
waterkit-location.workspace = true
waterkit-audio.workspace = true
waterkit-camera.workspace = true
waterkit-clipboard.workspace = true
waterkit-codec.workspace = true
waterkit-dialog.workspace = true
waterkit-fs.workspace = true
waterkit-haptic.workspace = true
waterkit-notification.workspace = true
waterkit-permission.workspace = true
waterkit-secret.workspace = true
waterkit-system.workspace = true
waterkit-video.workspace = true

[features]
sensor = []
biometric = []
location = []
audio = []
camera = []
clipboard = []
codec = []
dialog = []
fs = []
haptic = []
notification = []
permission = []
secret = []
system = []
video = []

[build-dependencies]
swift-bridge-build.workspace = true
waterkit-build.workspace = true
