[package]
name = "waterkit-audio-test"
version = "0.1.0"
edition = "2021"
publish = false
description = "macOS test for waterkit-audio"


[[bin]]
name = "audio-test"
path = "src/main.rs"

[[bin]]
name = "audio-recorder-test"
path = "src/bin/audio_recorder_test.rs"

[dependencies]
waterkit-audio.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
futures = { workspace = true }

