[package]
name = "waterkit-audio-test"
version = "0.1.0"
edition = "2021"
publish = false
description = "macOS test for waterkit-audio"


[[bin]]
name = "audio-test"
path = "src/main.rs"

[[bin]]
name = "audio-recorder-test"
path = "src/bin/audio_recorder_test.rs"

[dependencies]
waterkit-audio.workspace = true
futures-timer = "3.0"
futures = { workspace = true }

