[package]
name = "waterkit-camera-test"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
waterkit-camera = { path = "../../../camera", features = ["codec"] }
winit = "0.30"
wgpu.workspace = true
pollster = "0.4"
env_logger = "0.11"
bytemuck = { version = "1", features = ["derive"] }
