[package]
name = "waterkit-codec-bench"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "waterkit-codec-bench"
path = "src/main.rs"

[[bin]]
name = "waterkit-recorder"
path = "src/recorder.rs"

[[bin]]
name = "waterkit-profiler"
path = "src/profiler.rs"

[dependencies]
waterkit-codec = { path = "../../../codec", features = ["av1"] }
waterkit-screen = { path = "../../../screen" }
env_logger = "0.11"
