[package]
name = "waterkit-location-test"
version = "0.1.0"
edition = "2021"
publish = false
description = "macOS test for waterkit-location"

[[bin]]
name = "location-test"
path = "src/main.rs"

[dependencies]
waterkit-location.workspace = true
waterkit-permission.workspace = true
tokio.workspace = true
