[package]
name = "waterkit-video-test"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "waterkit-video-test"
path = "src/main.rs"

[dependencies]
waterkit-video.workspace = true
waterkit-screen.workspace = true
waterkit-codec.workspace = true
wgpu.workspace = true
winit.workspace = true
pollster.workspace = true
metal.workspace = true
objc.workspace = true
