[package]
name = "waterkit-dialog-demo"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[lints]
workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
waterkit-dialog.workspace = true
